# mtg-deck-stats

./: .gitignore  Cargo.toml  README.md
src/: input.rs  main.rs  stats.rs
