[package]
name = "mtg_deck_stats"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

description = "Some stats on MTG decks to help deckbuilding. For now categories probabilties per turn"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "0.8.0"
structopt = "0.3.1"
itertools = "0.8.0"
snafu = "0.5.0"
